@@ -1,6 +1,14 @@
 25Oct01=======================================================================
 1. added unset/password command to allow sysops (only) to completely delete
 and remove a user's password.
+2. make 'read' increment the 'no of times read' for all messages.
+3. give a read receipt for everybody that reads a message so marked.
+4. enhance set/email so that if you set email address(es) with this command
+it will send any messages to your callsign as they come in. unset/email
+will disable forwarding. This probably only works for unix systems. To enable
+this feature you need to download Mail::Send from CPAN and install it.
+(http://www.cpan.org/modules/by-module/Mail/Mail-Tools-1.40.tar.gz). If you
+don't want this then it should work without.
 24Oct01=======================================================================
 1. added (un)set/register, show/registered commands which when a 'set/var
 $main::reqreg = 1' is done in the startup script will require users to 
